<resources>
    <!-- MainActivity -->
    <string name="app_name">StartPomodoro</string>
    <string name="main_activity_name">포모도로 타이머</string>
    <string name="timer_option">설정</string>
    <string name="half_hour_timer">30분 (25분 집중 / 5분 휴식)</string>
    <string name="one_hour_timer">1시간 (50분 집중 / 10분 휴식)</string>
    <string name="repetition">반복</string>
    <string name="repetition_cnt">1</string>
    <string name="repetition_up">+</string>
    <string name="repetition_down">-</string>
    <string name="total_time_text">총 소요시간</string>
    <string name="total_time">30분</string>
    <string name="start">시작</string>

    <!-- TimerActivity -->
    <string name="state_concentration">집중</string>
    <string name="state_break">휴식</string>
    <string name="end">종료</string>
</resources>